[workspace]
members = ["pega-core", "python", "engine-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Workspace members
pega-core = { path = "pega-core" }

# Core dependencies
cudarc = { version = "0.18.0", features = ["cuda-12040"] }
tracing = "0.1"
offset-allocator = "0.2.0"
hashlink = "0.11.0"
tokio = { version = "1.48.0", features = ["full"] }
bincode = "2.0.1"
rand = "0.9.2"
shared_memory = "0.12"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }

# grpc
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"


# Python bindings
pyo3 = { version = "0.22" }
pyo3-build-config = { version = "0.22", features = ["resolve-config"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# Dev dependencies
criterion = "0.5"
