[package]
name = "pega-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.18.0", features = ["cuda-12040"] }
tracing = "0.1"
offset-allocator = "0.2.0"
moka = { version = "0.12", features = ["sync"] }
tokio = { version = "1.48.0", features = ["full"] }
bincode = "2.0.1"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pinned_copy"
harness = false

[[bench]]
name = "uds_latency"
harness = false

[[bench]]
name = "bincode_msg"
harness = false
