[package]
name = "pegaflow-core"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc.workspace = true
log.workspace = true
logforth.workspace = true
colored.workspace = true
offset-allocator.workspace = true
hashlink.workspace = true
tokio.workspace = true
shared_memory.workspace = true
uuid.workspace = true
opentelemetry.workspace = true
bytesize.workspace = true
serde.workspace = true
libc = "0.2"
ahash.workspace = true
io-uring = "0.7"
futures = "0.3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "pinned_copy"
harness = false

[[bench]]
name = "uds_latency"
harness = false

[[bin]]
name = "pegaflow_topo_cli"
path = "src/bin/pegaflow_topo_cli.rs"

[[example]]
name = "pinned_alloc"
