[package]
name = "pegaflow-server"
version.workspace = true
edition.workspace = true

[dependencies]
pegaflow-core.workspace = true
prost.workspace = true
pyo3 = { workspace = true, features = ["auto-initialize"] }
cudarc.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"
pyo3-build-config.workspace = true
