[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pegaflow-llm"
version = "0.0.3"
description = "High-performance key-value storage engine with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PegaFlow Contributors" }
]
keywords = ["storage", "kv-store", "rust", "vllm", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "pegaflow.pegaflow"
python-source = "."
# Automatically include binaries defined in Cargo.toml [[bin]] sections
include = ["pegaflow/pegaflow-server-py"]

[project.scripts]
pegaflow-server = "pegaflow._server:main"
